--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-img": "^1.0.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "concurrently": "^7.0.0",
     "eleventy-plugin-svg-sprite": "^1.2.2",
     "esbuild-sass-plugin": "2.0.1",
@@ -27,6 +28,7 @@
     "vite": "^2.7.13"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
