--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-img": "^1.0.0",
+    "@lit-labs/motion": "^1.0.2",
     "astro": "^0.22.20",
     "astro-icon": "^0.5.3",
     "body-scroll-lock": "^4.0.0-beta.0",
