--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "astro-icon": "^0.5.3",
     "body-scroll-lock": "^4.0.0-beta.0",
     "lit": "^2.1.1",
+    "throttle-debounce": "^3.0.1",
     "vite": "^2.7.13"
   },
   "devDependencies": {
