--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "astro-icon": "^0.5.3",
     "body-scroll-lock": "^4.0.0-beta.0",
     "lit": "^2.1.1",
-    "throttle-debounce": "^3.0.1",
-    "vite": "^2.7.13"
+    "throttle-debounce": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.4",
     "@mdx-js/preact": "^2.0.0",
+    "@storybook/addon-a11y": "^6.4.19",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
@@ -42,7 +42,7 @@
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
-    "lit-html": "^2.1.3",
-    "storybook-builder-vite": "^0.1.16"
+    "storybook-builder-vite": "^0.1.16",
+    "vite": "^2.7.13"
   }
 }
