--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A website starter template with 11ty, web components and open props",
   "main": "index.js",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
+    "build-storybook": "build-storybook",
+    "dev": "astro dev",
     "preview": "astro preview",
+    "start": "astro dev",
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook",
-    "build-storybook": "build-storybook"
+    "test": "ava"
   },
   "keywords": [
     "11ty",
@@ -37,12 +38,17 @@
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
     "@storybook/html": "^6.4.19",
+    "@storybook/testing-library": "0.0.9",
     "@types/body-scroll-lock": "^3.1.0",
+    "ava": "^4.1.0",
     "babel-loader": "^8.2.3",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
+    "playwright": "^1.20.0",
     "storybook-builder-vite": "^0.1.16",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2",
     "vite": "^2.7.13"
   }
 }
