--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "astro dev",
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook",
-    "test": "ava"
+    "test": "ava --serial"
   },
   "keywords": [
     "11ty",
@@ -50,5 +50,18 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "vite": "^2.7.13"
-  }
+  },
+  "type": "module",
+  "ava": {
+		"extensions": {
+			"ts": "module"
+		},
+		"nodeArguments": [
+			"--loader=ts-node/esm"
+		],
+    "files": [
+      "src/**/*.spec.ts"
+    ],
+    "ignoredByWatcher": ["!**/*.{ts}"]
+	}
 }
