--- a/components/package.json
+++ b/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "components",
+  "name": "@site-starter/components",
   "version": "0.1.0",
   "type": "module",
   "description": "web components design system with storybook",
