--- a/components/package.json
+++ b/components/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@site-starter/components",
+  "name": "components",
   "version": "0.1.0",
-  "type": "module",
-  "description": "web components design system with storybook",
+  "description": "design system",
   "main": "index.js",
   "scripts": {
-    "build": "build-storybook",
+    "build": "build-storybook -o dist",
     "lint": "eslint",
     "start": "start-storybook -p 6006",
     "test": "ava --serial"
@@ -15,11 +14,14 @@
     "url": "git+https://github.com/kasperstorgaard/site-starter.git"
   },
   "keywords": [
-    "web",
-    "componenst",
-    "storybook",
+    "design",
+    "system",
+    "atomic",
     "vite",
-    "ava"
+    "storybook",
+    "lit",
+    "web",
+    "components"
   ],
   "author": "kasperstorgaard",
   "license": "ISC",
@@ -28,33 +30,30 @@
   },
   "homepage": "https://github.com/kasperstorgaard/site-starter#readme",
   "dependencies": {
-    "@lit-labs/motion": "^1.0.2",
     "body-scroll-lock": "^4.0.0-beta.0",
-    "lit": "^2.1.1",
+    "lit": "^2.2.1",
     "throttle-debounce": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.4",
-    "@mdx-js/preact": "^2.0.0",
+    "@babel/core": "^7.17.8",
     "@storybook/addon-a11y": "^6.4.19",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
     "@storybook/html": "^6.4.19",
-    "@storybook/testing-library": "0.0.9",
     "@swc-node/register": "^1.4.2",
     "@types/body-scroll-lock": "^3.1.0",
     "ava": "^4.1.0",
-    "babel-loader": "^8.2.3",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
+    "babel-loader": "^8.2.4",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-ava": "^13.2.0",
     "eslint-plugin-import": "^2.25.4",
-    "playwright": "^1.20.0",
-    "sass": "^1.49.9",
-    "storybook-builder-vite": "^0.1.16",
-    "typescript": "^4.6.2",
-    "vite": "^2.7.13"
+    "playwright": "^1.20.1",
+    "sass": "^1.49.10",
+    "storybook-builder-vite": "^0.1.22",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.0"
   },
   "ava": {
     "extensions": [
