--- a/site/package.json
+++ b/site/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "@site-starter/site",
+  "name": "site",
   "version": "0.1.0",
-  "type": "module",
-  "description": "the main astro site",
+  "description": "the main site",
   "main": "index.js",
-  "scripts": {
-    "build": "astro build",
-    "dev": "astro dev",
-    "start": "npm run dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kasperstorgaard/site-starter.git"
   },
   "keywords": [
-    "astro"
+    "astro",
+    "JAMStack",
+    "vite"
   ],
   "author": "kasperstorgaard",
   "license": "ISC",
@@ -23,18 +18,23 @@
     "url": "https://github.com/kasperstorgaard/site-starter/issues"
   },
   "homepage": "https://github.com/kasperstorgaard/site-starter#readme",
+  "scripts": {
+    "build": "astro build",
+    "dev": "astro dev",
+    "start": "npm run dev",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
-    "astro": "^0.25.2",
-    "astro-icon": "^0.5.3"
+    "astro": "^0.25.4",
+    "astro-icon": "^0.6.1",
+    "picocolors": "^1.0.0",
+    "source-map": "^0.6.1",
+    "vite": "^2.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.4",
-    "babel-loader": "^8.2.3",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "typescript": "^4.6.2",
-    "vite": "^2.7.13"
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4"
   },
   "eslintConfig": {
     "env": {
