--- a/components/package.json
+++ b/components/package.json
@@ -7,7 +7,7 @@
     "build": "build-storybook -o dist",
     "lint": "eslint",
     "start": "start-storybook -p 6006",
-    "test": "ava --serial"
+    "test": "playwright test \\.spec\\.ts"
   },
   "repository": {
     "type": "git",
@@ -37,36 +37,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@playwright/test": "^1.20.1",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
     "@storybook/html": "^6.4.19",
-    "@swc-node/register": "^1.4.2",
     "@types/body-scroll-lock": "^3.1.0",
-    "ava": "^4.1.0",
     "babel-loader": "^8.2.4",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-ava": "^13.2.0",
     "eslint-plugin-import": "^2.25.4",
     "playwright": "^1.20.1",
     "storybook-builder-vite": "^0.1.22",
     "typescript": "^4.6.3",
     "vite": "^2.9.0"
-  },
-  "ava": {
-    "extensions": [
-      "ts"
-    ],
-    "require": [
-      "@swc-node/register"
-    ],
-    "files": [
-      "src/**/*.spec.ts"
-    ],
-    "ignoredByWatcher": [
-      "!**/*.{ts}"
-    ]
   },
   "eslintConfig": {
     "env": {
@@ -80,8 +64,7 @@
     ],
     "plugins": [
       "prettier",
-      "import",
-      "ava"
+      "import"
     ],
     "rules": {
       "semi": [
