--- a/.github/workflows/components-pr-updated.yml
+++ b/.github/workflows/components-pr-updated.yml
@@ -23,6 +23,6 @@ jobs:
           site_name: "capable-stardust-70089d"
           max_timeout: 360 # 6 Minutes
       - name: Run Playwright
-        run: npx -p @playwright/test playwright test -- --project "Desktop Chromium"
+        run: npx -p @playwright/test playwright test --project "Desktop Chromium"
         env:
           PLAYWRIGHT_TEST_BASE_URL: ${{ steps.waitFor200.outputs.url }}
