--- a/.github/workflows/components-pr-updated.yml
+++ b/.github/workflows/components-pr-updated.yml
@@ -15,14 +15,18 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: 16.x
+      - name: Install node modules
+        run: npm i
+      - name: Install playwright
+        run: npx playwright install --with-deps
       - name: Wait for Netlify deployment
         uses: jakepartusch/wait-for-netlify-action@v1.2
         id: waitForDeployment
         with:
           site_name: "capable-stardust-70089d"
           max_timeout: 360 # 6 Minutes
-      - name: Run Playwright
+      - name: Run Playwright tests
         run: npx -p @playwright/test playwright test --project "Desktop Chromium"
         env:
           PLAYWRIGHT_TEST_BASE_URL: ${{ steps.waitFor200.outputs.url }}
