--- a/components/package.json
+++ b/components/package.json
@@ -33,9 +33,11 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "lit": "^2.2.1",
     "sass": "^1.49.10",
-    "throttle-debounce": "^3.0.1",
+    "throttle-debounce": "^3.0.1"
+  },
+  "devDependencies": {
     "@babel/core": "^7.17.8",
-    "@playwright/test": "^1.20.1",
+    "@playwright/test": "^1.20.2",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
