--- a/.github/workflows/components-pr-updated.yml
+++ b/.github/workflows/components-pr-updated.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Run Playwright tests
         run: npx -p @playwright/test playwright test --project "Desktop Chromium"
         env:
-          PLAYWRIGHT_TEST_BASE_URL: ${{ steps.waitFor200.outputs.url }}
+          PLAYWRIGHT_TEST_BASE_URL: ${{ steps.waitForDeployment.outputs.url }}
