--- a/.github/workflows/components-pr-updated.yml
+++ b/.github/workflows/components-pr-updated.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: 16.x
       - name: Install node modules
-        run: npm i
+        run: npm ci
       - name: Install playwright
         run: npx playwright install --with-deps
       - name: Wait for Netlify deployment
