--- a/.github/workflows/components-pr-updated.yml
+++ b/.github/workflows/components-pr-updated.yml
@@ -16,10 +16,23 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16.x
+      - name: Cache node modules
+        id: cache-node-modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
       - name: Install node modules
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm ci
       - name: Install playwright
-        run: npx playwright install --with-deps
+        run: npx playwright install --with-deps chromium
       - name: Wait for Netlify deployment
         uses: jakepartusch/wait-for-netlify-action@v1.2
         id: waitForDeployment
