--- a/.github/workflows/components-pr-updated.yml
+++ b/.github/workflows/components-pr-updated.yml
@@ -10,6 +10,11 @@ defaults:
 
 jobs:
   test:
+    strategy:
+      fail-fast: false
+      matrix:
+        test-type: [Desktop, Mobile]
+        browser: [Chromium, Safari, Firefox]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -32,7 +37,7 @@ jobs:
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm ci
       - name: Install playwright
-        run: npx playwright install --with-deps chromium
+        run: npx playwright install --with-deps ${{ matrix.browser }}
       - name: Wait for Netlify deployment
         uses: jakepartusch/wait-for-netlify-action@v1.2
         id: waitForDeployment
@@ -40,6 +45,6 @@ jobs:
           site_name: "capable-stardust-70089d"
           max_timeout: 360 # 6 Minutes
       - name: Run Playwright tests
-        run: npx -p @playwright/test playwright test --project "Desktop Chromium"
+        run: npx -p @playwright/test playwright test --project "${{ matrix.test-type }} ${{ matrix.browser }}"
         env:
           PLAYWRIGHT_TEST_BASE_URL: ${{ steps.waitForDeployment.outputs.url }}
