--- a/components/package.json
+++ b/components/package.json
@@ -41,6 +41,7 @@
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
+    "@storybook/builder-vite": "^0.1.27",
     "@storybook/html": "^6.4.19",
     "@types/body-scroll-lock": "^3.1.0",
     "babel-loader": "^8.2.4",
@@ -48,7 +49,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "playwright": "^1.20.1",
-    "storybook-builder-vite": "^0.1.22",
     "typescript": "^4.6.3",
     "vite": "^2.9.0"
   },
