[Test] visual regression setup (#2)
* test: change test setup method to account for netlify tooling and wait for page to load

* refactor(components): adjust preview styles, add sb-states utility class

* refactor(components): rework button demo, adding new overview

* test(components): add button visual tests and snapshots

* test: adjust button snapshots to ignore OS
- bonus: adjust test-results folder
- bonus: update test results on failure

* test: relax snapshot diff

* test: take button screenshot of more specific element

* refactor: update storybook builder vite

* test: loosen the snapshot pixel diff sensitivity

* test: up the default timeout

* chore: appease netlify gods

* fix(components): use border same color as bg for inverse default button

* chore: cleanup launch file, add storybook:snap script

* tes(components): update snapshots, remove snapshot diff option (for now)

* test(components): give a 10 pixels leeway for snapshots

* chore(components): attempt to fix netlify cache issue with @storybook/cli install

* test(.github) run components workflow on macos

* chore(components): update github actions setup for stability, greener runs

* test(components): up the color diff allowed in snapshot tests

--- a/.github/workflows/components-pr-updated.yml
+++ b/.github/workflows/components-pr-updated.yml
@@ -2,7 +2,7 @@ name: "Components: PR Updated"
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
+    types: [opened, reopened, ready_for_review]
 
 defaults:
   run:
@@ -11,7 +11,8 @@ defaults:
 jobs:
   test:
     strategy:
-      fail-fast: false
+      fail-fast: true
+      max-parallel: 2
       matrix:
         include:
           - device: mobile
@@ -24,7 +25,7 @@ jobs:
             browser: webkit
           - device: desktop
             browser: firefox
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -57,3 +58,9 @@ jobs:
         run: npx -p @playwright/test playwright test --project "${{ matrix.device }} ${{ matrix.browser }}"
         env:
           PLAYWRIGHT_TEST_BASE_URL: ${{ steps.waitForDeployment.outputs.url }}
+      - name: Upload test results on failure
+        uses: actions/upload-artifact@v3
+        if: ${{ failure() }}
+        with:
+          name: test-results
+          path: components/test-results/
