--- a/components/package.json
+++ b/components/package.json
@@ -7,6 +7,7 @@
     "build": "build-storybook -o dist",
     "lint": "npx eslint",
     "start": "start-storybook -p 6006",
+    "serve": "npx http-server ./dist -p 6006",
     "test": "npx -p @playwright/test playwright test \\.spec\\.ts"
   },
   "repository": {
