fix(CI): make sure components action only activated when subpath has changes

--- a/.github/workflows/components-pr-created.yml
+++ b/.github/workflows/components-pr-created.yml
@@ -3,6 +3,8 @@ name: "Components: PR Created"
 on:
   pull_request:
     types: [opened, reopened, ready_for_review]
+    paths:
+      - 'components/**'
 
 defaults:
   run:
