chore(ci): doc components pr created action

--- a/.github/workflows/components-pr-created.yml
+++ b/.github/workflows/components-pr-created.yml
@@ -1,7 +1,12 @@
+# Runs all of code quality checks for PR's targeting components package.
 name: "Components: PR Created"
 
 on:
   pull_request:
+    # Limit to on open, as a new PR should be of high quality,
+    # and not something you continually update for weeks.
+    # When you are doing making fixes/adjustments after review,
+    # You should manually re-run this task on github.
     types: [opened, reopened, ready_for_review]
     paths:
       - 'components/**'
@@ -27,6 +32,8 @@ jobs:
             browser: webkit
           - device: desktop
             browser: firefox
+    # Run this on macos to make it match the local development environment
+    # (macos is expensive and somewhat ineffective though, so don't go ham in here.)
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
