--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "site-starter",
   "version": "0.1.0",
+  "private": true,
   "description": "monorepo of an astro site with web components and vite",
   "main": "index.js",
   "scripts": {
