[Chore] CI cache fix (#3)
* chore(ci): rename pr-updated -> pr-created

* chore(components): use storybook cli to start/build

* test(components): update mobile chrome snapshot

* chore(CI): change components test to run sequentially

* chore(components): try other CI command

* feat(components): add serve task for local testing of build

* test(components): update button overview snapshot

* chore(setup): rework components launch tasks

* test(components): rework design system page utility setup

* fix(CI): make sure components action only activated when subpath has changes

* chore(ci): doc components pr created action

* chore(ci): forbid .only in playwright tests running on CI, add more comments

* test(components): skip some  modal keyboard tests on iOS

* test(components): add tabKey utility to solve webkit issues

* fix(components): use npx @storybook/html for build and start

* test(components): handle netlify scripts blocking when page was closed

* chore(components): update storybook cli version

* chore(*): remove screenshot placed in wrong folder

* chore(components): update playwright test

* test(components): update screenshot setup

* test(components): up snapshot color threshold

* test(components): try a new pixel ratio threshold for images

* chore(ci): run tests on synchronize too

* test(components): remove pixel diff option

* fix(ci): add private: true to top level package to enable netlify monorepo support
- https://answers.netlify.com/t/faster-builds-with-npm-workspaces/54316

* chore(components): test new ci build command

* chore(ci): reorder the pr-updated github action file

* refactor(components): update button stories text to match state

* chore(ci): only run components test when pr is not draft

--- a/.github/workflows/components-pr-updated.yml
+++ b/.github/workflows/components-pr-updated.yml
@@ -1,8 +1,11 @@
-name: "Components: PR Created"
+# Runs all of code quality checks for PR's targeting components package.
+name: "Components: PR Updated"
 
 on:
   pull_request:
-    types: [opened, reopened, ready_for_review]
+    types: [opened, reopened, synchronize, ready_for_review]
+    paths:
+      - 'components/**'
 
 defaults:
   run:
@@ -10,9 +13,13 @@ defaults:
 
 jobs:
   test:
+    if: github.event.pull_request.draft == false
+    # Run this on macos to make it match the local development environment
+    # (macos is expensive and somewhat ineffective though, so don't go ham in here.)
+    runs-on: macos-latest
     strategy:
+      max-parallel: 1
       fail-fast: true
-      max-parallel: 2
       matrix:
         include:
           - device: mobile
@@ -25,7 +32,6 @@ jobs:
             browser: webkit
           - device: desktop
             browser: firefox
-    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
