--- a/site/netlify.toml
+++ b/site/netlify.toml
@@ -2,3 +2,9 @@
   base = "site/"
   command = "npm run build"
   publish = "dist/"
+
+[functions]
+  directory = "src/api/web"
+
+[dev]
+  framework = "astro"
