--- a/site/netlify.toml
+++ b/site/netlify.toml
@@ -9,3 +9,10 @@
 [dev]
   framework = "astro"
   port = 8888
+  environment = { API_URL = "$DEPLOY_URL" }
+
+[context.deploy-preview]
+  environment = { API_URL = "$DEPLOY_URL" }
+
+[context.production]
+  environment = { API_URL = "$URL" }
