refactor(site): rework config setup to put build env variables in json file

--- a/site/netlify.toml
+++ b/site/netlify.toml
@@ -16,3 +16,6 @@
 
 [context.production]
   environment = { API_URL = "$URL" }
+
+[[plugins]]
+  package = "/plugins/netlify-plugin-functions-config"
