Feature/netlify functions (#4)
* tmp

* refactor(api): make sure we use api responses, not server-like responses

* refactor(site): use name intead of giant question mark as header logo

* refactor(site): serve on port 8888 when using netlify dev to avoid cors errors

* feat(site/api): add new locations-list controller

* feat(site/components): add simple locations-list element

* feat(site/pages): add new location page

* feat(site/pages): rework home page to link to locations page

* fix(package): add lit to "site", attempt to fix build error

* fix(site/api): attempt to fix go

* fix(site/package): use astro for dev

* fix(site/api): use same version as build image (1.16)

* chore(site/api): add missing go package

* refactor(site/api): downgrade go version to match image

* fix(site/api): set up netlify fallback urls for authenticator redirect url

* fix(site): set up API_URL env variable

* feat(sites/api): add ApiUrl utility in env helper

* refactor(site/api): use ApiUrl in authenticator

* fix(site/api): use custom json response for logout next payload to avoid utf8 encoding, use ApiUrl helper

* refactor(site/api): name login variables a bit better, since they have longer lifespan

* fix(site/api): add guards to env.ApiUrl to ensure we don't get empty values

* fix(site/api): correct IsDev implementation to use ApiUrl

* feat(src/api): add redirect url utility to authenticator, to enable setting at runtime

* refactor(site/api): use new auth redirect url setter instead of apiurl

* fix(site/api): use referer and isDev to set authenticator redirect url

* feat(site/api): tmp tester endpoint to check netlify env variables

* refactor(site/api): rework auth return urls to use request

* Revert "feat(site/api): tmp tester endpoint to check netlify env variables"

This reverts commit 4f34c9e11bc3603f426dfa56c0d3dfe446f80f2c.

* refactor(site): rework config setup to put build env variables in json file


--- a/site/netlify.toml
+++ b/site/netlify.toml
@@ -2,3 +2,20 @@
   base = "site/"
   command = "npm run build"
   publish = "dist/"
+
+[functions]
+  directory = "src/api/web"
+
+[dev]
+  framework = "astro"
+  port = 8888
+  environment = { API_URL = "$DEPLOY_URL" }
+
+[context.deploy-preview]
+  environment = { API_URL = "$DEPLOY_URL" }
+
+[context.production]
+  environment = { API_URL = "$URL" }
+
+[[plugins]]
+  package = "/plugins/netlify-plugin-config"
