--- a/site/package.json
+++ b/site/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/kasperstorgaard/site-starter#readme",
   "scripts": {
-    "build": "astro build",
+    "build": "npx astro build",
     "dev": "astro dev",
     "start": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,6 +27,8 @@
   "dependencies": {
     "astro": "^0.25.4",
     "astro-icon": "^0.6.1",
+    "lit": "^2.2.2",
+    "netlify-cli": "^10.0.0",
     "picocolors": "^1.0.0",
     "source-map": "^0.6.1",
     "vite": "^2.9.0"
