site: add service worker setup - bonus: patching vite-plugin-pwa, as it does not work with astro in v0.12.0

--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -10,6 +10,8 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["../components/src/*"]
-    }
+    },
+    "types": ["vite/client"],
+    "lib": ["ESNext", "DOM", "WebWorker"],
   }
 }
