--- a/site/netlify.toml
+++ b/site/netlify.toml
@@ -19,3 +19,16 @@
 
 [[plugins]]
   package = "/plugins/netlify-plugin-config"
+
+[[headers]]
+  for = "/manifest.webmanifest"
+  [headers.values]
+    Content-Type = "application/manifest+json"
+
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    cache-control = '''
+    max-age=31536000,
+    immutable
+    '''
