--- a/site/package.json
+++ b/site/package.json
@@ -21,17 +21,20 @@
   "scripts": {
     "build": "npx astro build",
     "dev": "astro dev",
+    "serve": "npx http-server ./dist --p 3000",
     "start": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "astro": "^0.25.4",
+    "astro": "^1.0.0-beta.20",
     "astro-icon": "^0.6.1",
     "lit": "^2.2.2",
     "netlify-cli": "^10.0.0",
     "picocolors": "^1.0.0",
     "source-map": "^0.6.1",
-    "vite": "^2.9.0"
+    "vite": "^2.9.0",
+    "vite-plugin-pwa": "^0.12.0",
+    "workbox-precaching": "^6.5.3"
   },
   "devDependencies": {
     "eslint": "^8.12.0",
